--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body {
     height: 100vh;
     display: grid;
     aspect-ratio: 1;
+    z-index: 50;
 }
 /* === Barra de estado === */
 #statusBar, #navigationBar {
@@ -79,13 +80,13 @@ body {
     height: 100%;
     background: #00000077;
     transition: opacity 0.2s;
+    z-index: 500;
 }
 .alertDialog {
     background: #ffffff;
     padding: 10px 2px 2px 10px;
     width: 75%;
     overflow-wrap: break-word;
-    z-index: 500;
 }
 .alertDialog p {
     margin: 5px 10px 10px 0;
@@ -162,10 +163,13 @@ body {
 }
 
 /* Clases accesibles para apps Notroid (Futuros Seniors del CSS Notroid? 🗣😭🥀🔥) */
-.not-allWidth {
+.not-code {
+    font-family: Consolas, monospace;
+}
+.not-all-width {
     width: 100%
 }
-.not-allHeight {
+.not-all-height {
     height: 100%;
 }
 .not-flex {
