--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,7 @@ body {
 .app img {
     width: 70%;
     border-radius: 10px;
+    box-shadow: 0px 0px 5px 1px #000000;
 }
 .app p {
     color: white;
@@ -180,7 +181,40 @@ body {
     height: 100%;
     background: #ffffff;
     transition: opacity 0.4s, transform 0.3s;
+    overflow-y: auto;
     z-index: 100;
+}
+
+input[type="checkbox"].switch {
+    appearance: none; /* Esto es clave */
+    -webkit-appearance: none; /* Para Safari */
+    -moz-appearance: none; /* Para Firefox */
+    position: relative;
+    display: flex;
+    align-items: center;
+    background-color: #444;
+    border: 1px solid #fff;
+    border-radius: 50px;
+    width: 50px;
+    height: 25px;
+    transition: background 0.2s;
+}
+input[type="checkbox"].switch::before {
+    content: "";
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    left: 4px;
+    right: 0;
+    border-radius: 50%;
+    background: #fff;
+    transition: left 0.2s;
+}
+input[type="checkbox"].switch:checked {
+    background: #b3b;
+}
+input[type="checkbox"].switch:checked::before {
+    left: calc(60%);
 }
 
 /* Clases accesibles para apps Notroid (Futuros Seniors del CSS Notroid? 🗣😭🥀🔥) */
@@ -188,7 +222,7 @@ body {
     font-family: Consolas, monospace;
 }
 .not-all-width {
-    width: 100%
+    width: 100%;
 }
 .not-all-height {
     height: 100%;
